# Allium

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: allium.yml
activity-tracker/: Cargo.toml
activity-tracker/src/: activity_tracker.rs  main.rs
activity-tracker/src/view/: activity_tracker.rs  app.rs
allium/: Cargo.toml
allium-launcher/: Cargo.toml
allium-launcher/src/: allium_launcher.rs  command.rs  consoles.rs  cores.rs  devices.rs  main.rs
allium-launcher/src/entry/: app.rs  directory.rs  game.rs  gamelist.rs  lazy_image.rs  mod.rs
allium-launcher/src/entry/test/: gamelist.xml
allium-launcher/src/state/: games.rs  mod.rs  recents.rs  settings.rs
allium-launcher/src/state/settings/: display.rs  mod.rs  system.rs  theme.rs  wifi.rs
allium-launcher/src/view/: app.rs  apps.rs  browser.rs  entry_list.rs  games.rs  mod.rs  recents.rs
allium-launcher/src/view/settings/: about.rs  clock.rs  display.rs  language.rs  mod.rs  power.rs  system.rs  theme.rs  wifi.rs
allium-menu/: Cargo.toml
allium-menu/src/: allium_menu.rs  command.rs  main.rs  menu.rs  retroarch_info.rs
allium-menu/src/state/: menu.rs  mod.rs  netplay.rs
allium-menu/src/view/: ingame_menu.rs  mod.rs  text_reader.rs
allium/src/: allium.rs  cores.rs  main.rs
allium/src/state/: games.rs  settings.rs
alliumd/: Cargo.toml
alliumd/src/: alliumd.rs  main.rs
alliumm/: Cargo.toml
alliumm/src/: alliumm.rs  main.rs
alliumm/src/state/: menu.rs  mod.rs  netplay.rs
assets/font/Jua/: OFL.txt
assets/migrations/: README.md
assets/migrations/0000-retroarch-config/: package.sh
assets/migrations/0000-retroarch-config/retroarch-config/: config.xml
assets/migrations/0001-retroarch-core-overrides/: package.sh
assets/migrations/0002-drastic/: package.sh
assets/migrations/0002-drastic-1.7/: package.sh
assets/root/.allium/: cores.toml  devices.toml
assets/root/.allium/config/: consoles.toml
assets/root/.allium/scripts/: dufs-off.sh  dufs-on.sh  ftp-off.sh  ftp-on.sh  ntp-sync.sh  telnet-on.sh  wait-for-wifi.sh  wifi-off.sh  wifi-on.sh
assets/root/.tmp_update/: run.sh  updater  wifi.sh
assets/root/.tmp_update/script/: start_audioserver.sh
assets/root/Apps/File Explorer (DinguxCommander).pak/: config.json  launch.sh
assets/root/Apps/RetroArch.pak/: launch.sh
assets/root/Apps/Terminal (st).pak/: config.json  st
assets/root/RetroArch/: .atari800.cfg  onion_ra_patch.cfg  retroarch.sh
assets/root/RetroArch/.crocods/: crocods.ini
assets/root/RetroArch/.retroarch/: retroarch.cfg
assets/simulator/: allium.db  current_game
common/: Cargo.toml
common/src/: battery.rs  command.rs  constants.rs  database.rs  display.rs  game_info.rs  lib.rs  locale.rs  resources.rs  retroarch.rs  stylesheet.rs  wifi.rs
common/src/display/: color.rs  font.rs  image.rs  mod.rs  settings.rs
common/src/geom/: mod.rs
common/src/platform/: mock.rs  mod.rs  simulator.rs
common/src/platform/miyoo/: evdev.rs  framebuffer.rs  mod.rs  screen.rs  volume.rs
common/src/platform/miyoo/battery/: miyoo283.rs  miyoo354.rs  mod.rs
common/src/platform/simulator/: mod.rs
common/src/view/: battery_indicator.rs  button.rs  button_hint.rs  button_icon.rs  clock.rs  color_picker.rs  image.rs  label.rs  list.rs  mod.rs  null.rs  row.rs  scroll_list.rs  settings_list.rs  toggle.rs
common/src/view/input/: button.rs  color_picker.rs  datetime.rs  keyboard.rs  mod.rs  number.rs  percentage.rs  select.rs  text_box.rs  toggle.rs
crates/activity-tracker/: Cargo.toml
crates/activity-tracker/src/: activity_tracker.rs
crates/activity-tracker/src/view/: mod.rs
crates/allium-launcher/: Cargo.toml
crates/allium-launcher/src/: allium_launcher.rs  consoles.rs  main.rs
crates/allium-launcher/src/entry/: directory.rs  game.rs  gamelist.rs  mod.rs
crates/allium-launcher/src/view/: mod.rs  (+2 more)
crates/allium-menu/: Cargo.toml
crates/allium-menu/src/: allium_menu.rs
crates/alliumd/: Cargo.toml
crates/alliumd/src/: alliumd.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: app.rs  command.rs  constants.rs  database.rs  game_info.rs  input.rs  lib.rs  power.rs  resources.rs  style.rs  stylesheet.rs  wifi.rs
crates/ffi/: build.rs
crates/ffi/src/: lib.rs
crates/myctl/src/: display.rs  main.rs  volume.rs
crates/say/: Cargo.toml
crates/show-hotkeys/: Cargo.toml
crates/show-hotkeys/src/: app.rs  main.rs
ffi/: Cargo.toml  build.rs
migrations/: README.md
migrations/0000-retroarch-config/retroarch-config/: np2.cfg
migrations/0002-drastic-1.8/: package.sh
myctl/: Cargo.toml
myctl/src/: display.rs  main.rs  volume.rs
say/: Cargo.toml
say/src/: main.rs
screenshot/: Cargo.toml
screenshot/src/: main.rs
scripts/: extract_cores.py
show/: Cargo.toml
show-hotkeys/src/view/: mod.rs
show/src/: main.rs
src/: allium.rs  alliumd.rs  backend.rs  battery.rs  constants.rs  cores.rs  counter.rs  display.rs  fonts.rs  framebuffer.rs  image.rs  keys.rs  launcher.rs  main.rs  maind.rs  minifb.rs  retroarch.rs  stylesheet.rs
src/display/: framebuffer.rs  mod.rs
src/launcher/: mod.rs
src/platform/: mod.rs
src/platform/miyoo/: evdev.rs  framebuffer.rs  mod.rs  volume.rs
src/platform/simulator/: mod.rs
src/state/: games.rs  mod.rs  recents.rs  settings.rs
static/.allium/config/: consoles.toml  cores.toml
static/.allium/scripts/: ftp-on.sh  ota-update.sh  swap-off.sh  swap-on.sh  telnet-off.sh  wait-for-wifi.sh  wifi-on.sh
static/.tmp_update/: updater
static/.tmp_update/lib/: libSDL-1.2.so.0
static/.tmp_update/script/: stop_audioserver.sh
static/Allium.pak/: launch.sh
static/Apps/Activity Tracker.pak/: config.json
static/Apps/EBook Reader (PixelReader).pak/: config.json  launch.sh
static/Apps/File Explorer (DinguxCommander).pak/: DinguxCommander
static/Apps/RetroArch.pak/: config.json  launch.sh
static/Apps/Terminal (st).pak/: config.json  launch.sh  source.txt  st
static/RetroArch/: RetroArch_Dingux_forMiyooMini.txt
toolchain/: Dockerfile
ui/: main.slint
(+614 files in other folders)
