[workspace]
members = [
    "crates/common",
    "crates/alliumd",
    "crates/allium-launcher",
    "crates/allium-menu",
    "crates/activity-tracker",
    "crates/ffi",
    "crates/myctl",
    "crates/say",
    "crates/screenshot",
    "crates/show",
    "crates/show-hotkeys",
]
exclude = [
    "third-party/dufs"
]
resolver = "2"

# Following: https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

# allium-launcher will not be running at the same time as games,
# so size is not as important as speed.
[profile.release.package.allium-launcher]
opt-level = 3
