[package]
name = "allium-launcher"
version = "0.20.8"
edition = "2021"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.26", features = ["serde"] }
embedded-graphics = "0.8.0"
lazy_static = "1.4.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
strum = "0.24.1"
async-trait = "0.1.68"
sysinfo = "0.29.2"
type-map = "0.4.0"
simple_logger = { version = "4.2.0", default-features = false }
log = { version = "0.4.19", features = ["release_max_level_info"] }
image = { version = "0.23", default-features = false, features = ["gif", "jpeg", "png"] }
serde-xml-rs = "0.6.0"
rand = "0.8.5"
enum-map = "2.6.0"

[dependencies.common]
path = "../common"
