[package]
name = "allium-menu"
version = "0.8.0"
edition = "2021"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
embedded-graphics = "0.8.0"
lazy_static = "1.4.0"
image = "0.24.6"
rusttype = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
strum = { version = "0.24.1", features = ["derive"] }
async-trait = "0.1.68"
embedded-text = "0.6.0"
fluent-templates = "0.8.0"
type-map = "0.5.0"

[dependencies.common]
path = "../common"
