[package]
name = "allium-menu"
version = "0.20.8"
edition = "2021"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]

[dependencies]
anyhow = "1.0.70"
embedded-graphics = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
strum = { version = "0.24.1", features = ["derive"] }
async-trait = "0.1.68"
type-map = "0.4.0"
simple_logger = { version = "4.2.0", default-features = false }
log = { version = "0.4.19", features = ["release_max_level_info"] }

[dependencies.common]
path = "../common"
