[package]
name = "alliumd"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
futures = "0.3.28"
lazy_static = "1.4.0"
nix = "0.26.2"
regex = "1.8.3"
rusttype = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dependencies.common]
path = "../common"
