[package]
name = "alliumd"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
enum-map = "2.5.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
nix = "0.23"
rusttype = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = { version = "4.2.0", default-features = false }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.common]
path = "../common"
