[package]
name = "alliumd"
version = "0.20.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]
console = ["console-subscriber"]

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
console-subscriber = { version = "0.1.9", optional = true }
enum-map = "2.5.0"
lazy_static = "1.4.0"
log = { version = "0.4.19", features = ["release_max_level_info"] }
nix = "0.23"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = { version = "4.2.0", default-features = false }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.common]
path = "../common"
