[package]
name = "common"
version = "0.2.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
embedded-graphics = "0.7.1"
embedded_font = "0.1.3"
image = "0.24.6"
itertools = "0.10.5"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
nix = "0.26.2"
regex = "1.8.3"
rusttype = "0.9.3"
serde = { version ="1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

[target.'cfg(target_arch = "arm")'.dependencies]
evdev = { version = "0.12.1", features = ["tokio"]}
framebuffer = { version = "0.3.1"}

[target.'cfg(not(target_arch = "arm"))'.dependencies]
embedded-graphics-simulator = { version = "0.4.1" }
sdl2 = { version = "0.35.2" }
