[package]
name = "common"
version = "0.20.8"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["embedded-graphics-simulator", "sdl2"]
miyoo = ["evdev", "framebuffer", "ffi", "sysfs_gpio"]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = { version = "0.4.26", features = ["serde"] }
embedded-graphics = "0.8.0"
enum-map = "2.5.0"
fluent-templates = { git = "https://github.com/goweiwen/fluent-templates", branch = "ignore", version = "0.8.0", features = ["walkdir"], default-features = false }
image = { version = "0.23", default-features = false, features = ["gif", "jpeg", "png"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
log = { version = "0.4.19", features = ["release_max_level_info"] }
nix = "0.23"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
rusttype = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
type-map = "0.4.0"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
sdl2 = { version = "0.35.2", optional = true }
ffi = { version = "0.1.0", path = "../ffi", optional = true }
sysfs_gpio = { version = "0.6.1", optional = true }
wait-timeout = "0.2.0"

[target.'cfg(target_arch = "arm")'.dependencies]
evdev = { version = "0.12.1", features = ["tokio"], optional = true }
framebuffer = { version = "0.3.1", optional = true }

