[package]
name = "say"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.71"
embedded-graphics = "0.8.0"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
