[package]
name = "show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
framebuffer = "0.3.1"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "gif"] }
